test/spec_vectors/select/fail/module_10.wat
(module (func $type-num-vs-num (drop (select (i32.const 1) (f64.const 1.0) (i32.const 1)))))